--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     </header>
 
     <main>
-      <a class="card" href="./petitionresult.html">View petitionresult.html<br><small>Main project page</small></a>
+  <a class="card" href="./hmltproject/nohomeowrkpetition.html">Open No Homework Petition (main page)<br><small>hmltproject/nohomeowrkpetition.html</small></a>
 
-      <a class="card" href="./hmltproject/nohomeowrkpetition.html">Open hmltproject/nohomeowrkpetition.html<br><small>Alternate page in the subfolder</small></a>
+  <a class="card" href="./petitionresult.html">Petition Result (secondary/result page)<br><small>petitionresult.html</small></a>
 
       <section style="margin-top:1.5rem">
         <h2>Images</h2>
