--- a/petitionresult.html
+++ b/petitionresult.html
@@ -11,7 +11,8 @@
             background-color: lightblue;
         }
     </style>
-    <img src="imagesfolder/istockphoto-868643608-612x612.jpg" alt="corner image" style="position: absolute; top: 10px; right: 10px; width: 200px;" height="200px">
+    <!-- images are stored in hmltproject/imagesfolder/ so use that path from the repo root -->
+    <img src="hmltproject/imagesfolder/istockphoto-868643608-612x612.jpg" alt="corner image" style="position: absolute; top: 10px; right: 10px; width: 200px;" height="200px">
     <h1 style="color: blue;">Petition Result</h1>
  <h3>Thank you for your input!</h3>
 <ol><strong>This is the power your signature has: </strong></ol>
@@ -31,7 +32,8 @@
 
 <h2>remember your voice has power!</h2>
 
-<a href="nohomeowrkpetition.html">
+<!-- link back to the petition (which lives in hmltproject/) -->
+<a href="hmltproject/nohomeowrkpetition.html">
     <button>Go Back to Petition</button>
 </a>
 <br>
